--- a/wordCompose/wordCompose.html
+++ b/wordCompose/wordCompose.html
@@ -17,6 +17,23 @@
   <p>索引</p>
   <nav id="list">
     <ul>
+      <li><a href="wordCompose031.html">青</a></li>
+      <li><a href="wordCompose030.html">初</a></li>
+      <li><a href="wordCompose029.html">並み</a></li>
+      <li><a href="wordCompose028.html">直す</a></li>
+      <li><a href="wordCompose027.html">っぱなし</a></li>
+      <li><a href="wordCompose026.html">嫌い</a></li>
+      <li><a href="wordCompose025.html">盛り</a></li>
+      <li><a href="wordCompose024.html">気取り</a></li>
+      <li><a href="wordCompose023.html">果てる</a></li>
+      <li><a href="wordCompose022.html">がち</a></li>
+      <li><a href="wordCompose021.html">めく</a></li>
+      <li><a href="wordCompose020.html">ずくめ</a></li>
+      <li><a href="wordCompose019.html">まみれ</a></li>
+      <li><a href="wordCompose018.html">だらけ</a></li>
+      <li><a href="wordCompose017.html">ぶり</a></li>
+      <li><a href="wordCompose016.html">散らかす</a></li>
+      <li><a href="wordCompose015.html">っぽい</a></li>
       <li><a href="wordCompose014.html">尽くす</a></li>
       <li><a href="wordCompose013.html">党</a></li>
       <li><a href="wordCompose012.html">まくる</a></li>
