--- a/wordCompose/wordCompose018.html
+++ b/wordCompose/wordCompose018.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~尽くす的用法</title>
+    <title>日文複合語:~まみれ的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,19 +16,19 @@
    
   <!-- Contents -->
     <div class="main">
-      <h2>尽くす(つくす)</h2>
-      <p>用法:動詞ます形 + <b>尽くす</b> = 表示完全毫無剩下的</p>
-      <p>．食べ<b>尽くす</b>(吃個精光)
-      <p>．売り<b>尽くす</b>(全部賣完)</p>
-      <p>．力を出し<b>尽くす</b>(出盡全力)</p>
+      <h2>だらけ</h2>
+      <p>用法:名詞 + <b>だらけ</b> = 表示到處滿佈的樣子(多帶有負面評價)</p>
+      <p>．借金<b>だらけ</b>(一屁股債)
+      <p>．泥<b>だらけ</b>(滿身泥)</p>
+      <p>．怪我<b>だらけ</b>(滿身傷)</p>
     </div>
  
   <!-- Navs -->
     <nav>
     <ul>
-      <li><a rel="prev" href="wordCompose015.html">看上一篇</a></li>
+      <li><a rel="prev" href="wordCompose019.html">看上一篇</a></li>
       <li><a rel="prev" href="wordCompose.html">索引</a></li>
-      <li><a rel="prev" href="wordCompose013.html">看下一篇</a></li>
+      <li><a rel="prev" href="wordCompose017.html">看下一篇</a></li>
     </ul>
     </nav>
 
