--- a/wordCompose/wordCompose022.html
+++ b/wordCompose/wordCompose022.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~尽くす的用法</title>
+    <title>日文複合語:~果てる的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,19 +16,19 @@
    
   <!-- Contents -->
     <div class="main">
-      <h2>尽くす(つくす)</h2>
-      <p>用法:動詞ます形 + <b>尽くす</b> = 表示完全毫無剩下的</p>
-      <p>．食べ<b>尽くす</b>(吃個精光)
-      <p>．売り<b>尽くす</b>(全部賣完)</p>
-      <p>．力を出し<b>尽くす</b>(出盡全力)</p>
+      <h2>がち</h2>
+      <p>用法:名詞/動詞ます形 + <b>がち</b> = 表示容易出現某種傾向的意思(多用在負面評價)</p>
+      <p>．病気<b>がち</b>(容易生病)
+      <p>．猫背になり<b>がち</b>(容易駝背)</p>
+      <p>．曇り<b>がち</b>の朝(多雲的早晨)</p>
     </div>
  
   <!-- Navs -->
     <nav>
     <ul>
-      <li><a rel="prev" href="wordCompose015.html">看上一篇</a></li>
+      <li><a rel="prev" href="wordCompose023.html">看上一篇</a></li>
       <li><a rel="prev" href="wordCompose.html">索引</a></li>
-      <li><a rel="prev" href="wordCompose013.html">看下一篇</a></li>
+      <li><a rel="prev" href="wordCompose021.html">看下一篇</a></li>
     </ul>
     </nav>
 
