--- a/wordCompose/wordCompose028.html
+++ b/wordCompose/wordCompose028.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~並み的用法</title>
+    <title>日文複合語:~直す的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -18,9 +18,9 @@
     <div class="main">
       <h2>直す（なおす）</h2>
       <p>用法:動詞ます形 + <b>直す</b> = 表示為了使結果更好而再做一次</p>
-      <p>．計画を見<b>直す</b>(再次檢視計畫)
-      <p>．最初からやり<b>直す</b>(從頭開始再做一次)</p>
-      <p>．履歴書を書き<b>直す</b>(重寫一遍履歷)</p>
+      <p>．計画を見<b>直す。</b>(再次檢視計畫)
+      <p>．最初からやり<b>直す。</b>(從頭開始再做一次)</p>
+      <p>．履歴書を書き<b>直す。</b>(重寫一遍履歷)</p>
     </div>
  
   <!-- Navs -->
