--- a/wordCompose/wordCompose025.html
+++ b/wordCompose/wordCompose025.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:~嫌い的用法</title>
+    <title>日文複合語:~盛り的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,7 +16,7 @@
    
   <!-- Contents -->
     <div class="main">
-      <h2>嫌い（ぎらい）</h2>
+      <h2>盛り（ざかり）</h2>
       <p>用法:名詞/動詞ます形 + <b>盛り</b> = 表示全盛時期</p>
       <p>．食べ<b>盛り</b>(食慾旺盛的發育期)
       <p>．働き<b>盛り</b>(工作壯年期)</p>
