--- a/wordCompose/wordCompose030.html
+++ b/wordCompose/wordCompose030.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>日文複合語:青~的用法</title>
+    <title>日文複合語:初~的用法</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
