--- a/wordDifference/wordDifference.html
+++ b/wordDifference/wordDifference.html
@@ -18,10 +18,31 @@
   <p>索引</p>
   <nav id="list">
    <ul>
+    <li><a href="wordDifference044.html">とまる & とどまる</a></li>
+    <li><a href="wordDifference043.html">にくい & づらい</a></li>
+    <li><a href="wordDifference042.html">内緒 & 秘密</a></li>
+    <li><a href="wordDifference041.html">具合 & 体調</a></li>
+    <li><a href="wordDifference040.html">めくる & まくる</a></li> 
+    <li><a href="wordDifference039.html">割り当て & 手分け</a></li> 
+    <li><a href="wordDifference038.html">ごとに & おきに</a></li> 
+    <li><a href="wordDifference037.html">お勧め & お薦め</a></li> 
+    <li><a href="wordDifference036.html">養う & 培う</a></li> 
+    <li><a href="wordDifference035.html">どんどん & だんだん</a></li> 
+    <li><a href="wordDifference034.html">下手 & 苦手</a></li> 
+    <li><a href="wordDifference033.html">上手 & 得意</a></li> 
+    <li><a href="wordDifference032.html">つくづく & しみじみ</a></li> 
+    <li><a href="wordDifference031.html">揺れる & 揺らぐ</a></li> 
+    <li><a href="wordDifference030.html">跳ぶ & 跳ねる</a></li> 
+    <li><a href="wordDifference029.html">混ざる & 混じる</a></li> 
+    <li><a href="wordDifference028.html">ひねる & ねじる</a></li> 
+    <li><a href="wordDifference027.html">憧れる & 羨む</a></li> 
+    <li><a href="wordDifference026.html">応じる & 応える</a></li> 
+    <li><a href="wordDifference025.html">夢中 & 熱中</a></li> 
+    <li><a href="wordDifference024.html">試みる & 試す</a></li> 
     <li><a href="wordDifference023.html">歩む & 歩く</a></li> 
     <li><a href="wordDifference022.html">蹲る & しゃがむ</a></li> 
     <li><a href="wordDifference021.html">促す & 急かす</a></li> 
-    <li><a href="wordDifference020.html">避ける & 避ける</a></li> 
+    <li><a href="wordDifference020.html">よける & さける</a></li> 
     <li><a href="wordDifference019.html">避ける & 躱す</a></li> 
     <li><a href="wordDifference018.html">転ぶ & 躓く</a></li> 
     <li><a href="wordDifference017.html">治す & 癒す</a></li>
