--- a/wordDifference/wordDifference031.html
+++ b/wordDifference/wordDifference031.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>つくづく、しみじみ的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>つくづく & しみじみ</h2>
+      <p><b>つくづく</b>:搖動。以一點為中心，上下左右的搖動，不安定的感覺。</p><p>例：海の波に大きく揺れる。</p>
+      <p><b>しみじみ</b>:動搖。全體劇烈晃動，從根本處不安定的感覺。</p><p>例：転職の決意が揺らぐ。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference032.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference030.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
