--- a/wordDifference/wordDifference033.html
+++ b/wordDifference/wordDifference033.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>下手、苦手的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>下手（じょうず） & 苦手（とくい）</h2>
+      <p><b>下手</b>:拿手。客觀對技能的高評價、讚揚，一般是用在他人。*用在自身有種自賣自誇的感覺。</p><p>例：彼は料理が上手です。</p>
+      <p><b>苦手</b>:擅長。主觀對技能的熟練感到自信，可以用在他人或自身。</p><p>例：私は泳ぎが得意です。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference034.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference032.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
