--- a/wordDifference/wordDifference042.html
+++ b/wordDifference/wordDifference042.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>にくい、づらい的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>にくい & づらい</h2>
+      <p><b>にくい</b>:保密。將事物隱瞞起來的情況，隱瞞對象為特定少數人，其他人不知道隱瞞事物的存在，日常口語使用。</p><p>例：両親に内緒で旅行に行った。</p>
+      <p><b>づらい</b>:秘密。隱瞞起來的事物，隱瞞對象為普遍多數人，其他人知道隱瞞事物的存在，給人較鄭重的感覺。</p><p>例：社員しか知らない企業秘密だ。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference044.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference042.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
