--- a/wordDifference/wordDifference025.html
+++ b/wordDifference/wordDifference025.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>応じる、応える的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>応じる（むちゅう）& 応える（ねっちゅう）</h2>
+      <p><b>応じる</b>:沉迷忘我。沉迷於特定事物中，無法思考其他事情的忘我狀態。</p><p>例：ゲームに夢中になって外遊びをしない。</p>
+      <p><b>応える</b>:熱衷。全心全意集中於特定事物上的狀態，與夢中比起來較為理性。</p><p>例：バドミントンに熱中している。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference026.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference024.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
