--- a/wordDifference/wordDifference026.html
+++ b/wordDifference/wordDifference026.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>憧れる、羨む的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>憧れる（おうじる）& 羨む（こたえる）</h2>
+      <p><b>憧れる</b>:對應。根據前項條件做出100%相符的對應。</p><p>例：体力に応じて、適切な運動をしましょう。</p>
+      <p><b>羨む</b>:回應。對前項事物做出回應，結果不一定會100%滿足。</p><p>例：期待に応えることができない。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference027.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference025.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
