--- a/wordDifference/wordDifference029.html
+++ b/wordDifference/wordDifference029.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>跳ぶ、跳ねる的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>跳ぶ（まざる） & 跳ねる（まじる）</h2>
+      <p><b>跳ぶ</b>:混雜。不同的東西融為一體，無法細分的樣子。</p><p>例：ヨーグルトと砂糖がよく混ざっている。</p>
+      <p><b>跳ねる</b>:摻雜。東西中摻有其他的東西，可區分出不同。</p><p>例：黒い髪の毛に白髪が混じっている。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference030.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference028.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
