--- a/wordDifference/wordDifference030.html
+++ b/wordDifference/wordDifference030.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>揺れる、揺らぐ的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>揺れる（とぶ） & 揺らぐ（はねる）</h2>
+      <p><b>揺れる</b>:跳躍。往上方跳起並在空中移動身軀的躍動感。</p><p>例：跳び箱を上手に跳ぶ。</p>
+      <p><b>揺らぐ</b>:跳起。著重在利用反作用力，向上方大力跳起的動作。</p><p>例：海面で魚が跳ねる。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference031.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference029.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
