--- a/wordDifference/wordDifference039.html
+++ b/wordDifference/wordDifference039.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>捲る（めくる）、捲る（まくる）的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>歩む（あゆむ）& 歩く（あるく）</h2>
-      <p><b>歩む</b>:前行。側重於抽象事物上的進展前行。</p><p>例：これからは職人の道を歩む。</p>
-      <p><b>歩く</b>:步行。側重於具體動作上的用腳前進。</p><p>例：店は駅から歩くと5分くらいかかる。</p>
+      <h2>捲る（めくる）& 捲る（まくる）</h2>
+      <p><b>割り当て</b>:分派。將一件事情先分成多個部分，再各自分配下去。</p><p>例：仕事の割り当てを決める。</p>
+      <p><b>手分け</b>:分頭進行。將一件事情分給許多人進行。</p><p>例：手分けして迷子を探します。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference041.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference039.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
