--- a/wordDifference/wordDifference025.html
+++ b/wordDifference/wordDifference025.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>応じる、応える的差異</title>
+    <title>夢中、熱中的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>応じる（むちゅう）& 応える（ねっちゅう）</h2>
-      <p><b>応じる</b>:沉迷忘我。沉迷於特定事物中，無法思考其他事情的忘我狀態。</p><p>例：ゲームに夢中になって外遊びをしない。</p>
-      <p><b>応える</b>:熱衷。全心全意集中於特定事物上的狀態，與夢中比起來較為理性。</p><p>例：バドミントンに熱中している。</p>
+      <h2>夢中（むちゅう）& 熱中（ねっちゅう）</h2>
+      <p><b>夢中</b>:沉迷忘我。沉迷於特定事物中，無法思考其他事情的忘我狀態。</p><p>例：ゲームに夢中になって外遊びをしない。</p>
+      <p><b>熱中</b>:熱衷。全心全意集中於特定事物上的狀態，與夢中比起來較為理性。</p><p>例：バドミントンに熱中している。</p>
     </div>
  
   <!-- Navs -->
