--- a/wordDifference/wordDifference026.html
+++ b/wordDifference/wordDifference026.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>憧れる、羨む的差異</title>
+    <title>応じる、応える的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>憧れる（おうじる）& 羨む（こたえる）</h2>
-      <p><b>憧れる</b>:對應。根據前項條件做出100%相符的對應。</p><p>例：体力に応じて、適切な運動をしましょう。</p>
-      <p><b>羨む</b>:回應。對前項事物做出回應，結果不一定會100%滿足。</p><p>例：期待に応えることができない。</p>
+      <h2>応じる（おうじる）& 応える（こたえる）</h2>
+      <p><b>応じる</b>:對應。根據前項條件做出100%相符的對應。</p><p>例：体力に応じて、適切な運動をしましょう。</p>
+      <p><b>応える</b>:回應。對前項事物做出回應，結果不一定會100%滿足。</p><p>例：期待に応えることができない。</p>
     </div>
  
   <!-- Navs -->
