--- a/wordDifference/wordDifference027.html
+++ b/wordDifference/wordDifference027.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>ひねる、ねじる的差異</title>
+    <title>憧れる、羨む的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>ひねる & ねじる</h2>
-      <p><b>ひねる</b>:憧憬。自身嚮往的理想目標，帶有敬意感。</p><p>例：子供の頃から海外生活に憧れていた。</p>
-      <p><b>ねじる</b>:羨慕。感到他人看起來比自身好而生出的渴望情感，有時帶有嫉妒感。</p><p>例：同期の出世を羨む。</p>
+      <h2>憧れる（あこがれる）& 羨む（うらやむ）</h2>
+      <p><b>憧れる</b>:憧憬。自身嚮往的理想目標，帶有敬意感。</p><p>例：子供の頃から海外生活に憧れていた。</p>
+      <p><b>羨む</b>:羨慕。感到他人看起來比自身好而生出的渴望情感，有時帶有嫉妒感。</p><p>例：同期の出世を羨む。</p>
     </div>
  
   <!-- Navs -->
