--- a/wordDifference/wordDifference028.html
+++ b/wordDifference/wordDifference028.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>混ざる、混じる的差異</title>
+    <title>ひねる、ねじる的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>混ざる & 混じる</h2>
-      <p><b>混ざる</b>:扭轉。輕輕地順著一方向扭轉物體。</p><p>例：蛇口をひねって水量を調節する。</p>
-      <p><b>混じる</b>:扭、擰。在物體兩端互為反方向的使勁大力扭、擰。</p><p>例：雑巾を握ってねじる。</p>
+      <h2>ひねる & ねじる</h2>
+      <p><b>ひねる</b>:扭轉。輕輕地順著一方向扭轉物體。</p><p>例：蛇口をひねって水量を調節する。</p>
+      <p><b>ねじる</b>:扭、擰。在物體兩端互為反方向的使勁大力扭、擰。</p><p>例：雑巾を握ってねじる。</p>
     </div>
  
   <!-- Navs -->
