--- a/wordDifference/wordDifference029.html
+++ b/wordDifference/wordDifference029.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>跳ぶ、跳ねる的差異</title>
+    <title>混ざる、混じる的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>跳ぶ（まざる） & 跳ねる（まじる）</h2>
-      <p><b>跳ぶ</b>:混雜。不同的東西融為一體，無法細分的樣子。</p><p>例：ヨーグルトと砂糖がよく混ざっている。</p>
-      <p><b>跳ねる</b>:摻雜。東西中摻有其他的東西，可區分出不同。</p><p>例：黒い髪の毛に白髪が混じっている。</p>
+      <h2>混ざる（まざる）& 混じる（まじる）</h2>
+      <p><b>混ざる</b>:混雜。不同的東西融為一體，無法細分的樣子。</p><p>例：ヨーグルトと砂糖がよく混ざっている。</p>
+      <p><b>混じる</b>:摻雜。東西中摻有其他的東西，可區分出不同。</p><p>例：黒い髪の毛に白髪が混じっている。</p>
     </div>
  
   <!-- Navs -->
