--- a/wordDifference/wordDifference030.html
+++ b/wordDifference/wordDifference030.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>揺れる、揺らぐ的差異</title>
+    <title>跳ぶ、跳ねる的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>揺れる（とぶ） & 揺らぐ（はねる）</h2>
-      <p><b>揺れる</b>:跳躍。往上方跳起並在空中移動身軀的躍動感。</p><p>例：跳び箱を上手に跳ぶ。</p>
-      <p><b>揺らぐ</b>:跳起。著重在利用反作用力，向上方大力跳起的動作。</p><p>例：海面で魚が跳ねる。</p>
+      <h2>跳ぶ（とぶ）& 跳ねる（はねる）</h2>
+      <p><b>跳ぶ</b>:跳躍。往上方跳起並在空中移動身軀的躍動感。</p><p>例：跳び箱を上手に跳ぶ。</p>
+      <p><b>跳ねる</b>:跳起。著重在利用反作用力，向上方大力跳起的動作。</p><p>例：海面で魚が跳ねる。</p>
     </div>
  
   <!-- Navs -->
