--- a/wordDifference/wordDifference031.html
+++ b/wordDifference/wordDifference031.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>つくづく、しみじみ的差異</title>
+    <title>揺れる、揺らぐ的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>つくづく & しみじみ</h2>
-      <p><b>つくづく</b>:搖動。以一點為中心，上下左右的搖動，不安定的感覺。</p><p>例：海の波に大きく揺れる。</p>
-      <p><b>しみじみ</b>:動搖。全體劇烈晃動，從根本處不安定的感覺。</p><p>例：転職の決意が揺らぐ。</p>
+      <h2>揺れる（ゆれる） & 揺らぐ（ゆらぐ）</h2>
+      <p><b>揺れる</b>:搖動。以一點為中心，上下左右的搖動，不安定的感覺。</p><p>例：海の波に大きく揺れる。</p>
+      <p><b>揺らぐ</b>:動搖。全體劇烈晃動，從根本處不安定的感覺。</p><p>例：転職の決意が揺らぐ。</p>
     </div>
  
   <!-- Navs -->
