--- a/wordDifference/wordDifference032.html
+++ b/wordDifference/wordDifference032.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>上手、得意的差異</title>
+    <title>つくづく、しみじみ的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>上手（じょうず） & 得意（とくい）</h2>
-      <p><b>上手</b>:痛切地。感受更深一層的樣子，苦痛的情感。</p><p>例：今回の事で、この仕事がつくづく嫌になった。</p>
-      <p><b>得意</b>:深切地。感慨深切的樣子，正面的情感。</p><p>例：世代の違いをしみじみと感じる。</p>
+      <h2>つくづく & しみじみ</h2>
+      <p><b>つくづく</b>:痛切地。感受更深一層的樣子，苦痛的情感。</p><p>例：今回の事で、この仕事がつくづく嫌になった。</p>
+      <p><b>しみじみ</b>:深切地。感慨深切的樣子，正面的情感。</p><p>例：世代の違いをしみじみと感じる。</p>
     </div>
  
   <!-- Navs -->
