--- a/wordDifference/wordDifference033.html
+++ b/wordDifference/wordDifference033.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>下手、苦手的差異</title>
+    <title>上手、得意的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>下手（じょうず） & 苦手（とくい）</h2>
-      <p><b>下手</b>:拿手。客觀對技能的高評價、讚揚，一般是用在他人。*用在自身有種自賣自誇的感覺。</p><p>例：彼は料理が上手です。</p>
-      <p><b>苦手</b>:擅長。主觀對技能的熟練感到自信，可以用在他人或自身。</p><p>例：私は泳ぎが得意です。</p>
+      <h2>上手（じょうず） & 得意（とくい）</h2>
+      <p><b>上手</b>:拿手。客觀對技能的高評價、讚揚，一般是用在他人。*用在自身有種自賣自誇的感覺。</p><p>例：彼は料理が上手です。</p>
+      <p><b>得意</b>:擅長。主觀對技能的熟練感到自信，可以用在他人或自身。</p><p>例：私は泳ぎが得意です。</p>
     </div>
  
   <!-- Navs -->
