--- a/wordDifference/wordDifference034.html
+++ b/wordDifference/wordDifference034.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>どんどん、だんだん的差異</title>
+    <title>下手、苦手的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>どんどん & だんだん</h2>
-      <p><b>どんどん</b>:拙劣。客觀對技能的低評價、可以用在他人或自身。*用在自身有種自謙的感覺。</p><p>例：私は絵が下手です。</p>
-      <p><b>だんだん</b>:不擅長。主觀對技能的感到沒自信、懼怕感，可以用在他人或自身。</p><p>例：彼は人付き合いが苦手です。</p>
+      <h2>下手 & 苦手</h2>
+      <p><b>下手</b>:拙劣。客觀對技能的低評價、可以用在他人或自身。*用在自身有種自謙的感覺。</p><p>例：私は絵が下手です。</p>
+      <p><b>苦手</b>:不擅長。主觀對技能的感到沒自信、懼怕感，可以用在他人或自身。</p><p>例：彼は人付き合いが苦手です。</p>
     </div>
  
   <!-- Navs -->
