--- a/wordDifference/wordDifference036.html
+++ b/wordDifference/wordDifference036.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>お勧め、お薦め的差異</title>
+    <title>養う、培う的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>お勧め（やしなう） & お薦め（つちかう）</h2>
-      <p><b>お勧め</b>:培養。事物上透過鍛鍊逐步積累培養。</p><p>例：日頃から自分で考え行動する習慣を養う。</p>
-      <p><b>お薦め</b>:培育。花費長時間培育養成資質能力、事物技巧。</p><p>例：仕事を通じて人脈を培う。</p>
+      <h2>養う（やしなう） & 培う（つちかう）</h2>
+      <p><b>養う</b>:培養。事物上透過鍛鍊逐步積累培養。</p><p>例：日頃から自分で考え行動する習慣を養う。</p>
+      <p><b>培う</b>:培育。花費長時間培育養成資質能力、事物技巧。</p><p>例：仕事を通じて人脈を培う。</p>
     </div>
  
   <!-- Navs -->
