--- a/wordDifference/wordDifference041.html
+++ b/wordDifference/wordDifference041.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>内緒、秘密的差異</title>
+    <title>具合、体調的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>内緒（ないしょ）& 秘密（ひみつ）</h2>
-      <p><b>内緒</b>:狀況。人或事物本來具備的機能狀況。</p><p>例：機械の具合が悪いので、ちょっと調べてみる。</p>
-      <p><b>秘密</b>:身體狀況。只用在人的身體狀況。</p><p>例：どうしたの？体調が悪そうに見える。</p>
+      <h2>具合（ぐあい）& 体調（たいちょう）</h2>
+      <p><b>具合</b>:狀況。人或事物本來具備的機能狀況。</p><p>例：機械の具合が悪いので、ちょっと調べてみる。</p>
+      <p><b>体調</b>:身體狀況。只用在人的身體狀況。</p><p>例：どうしたの？体調が悪そうに見える。</p>
     </div>
  
   <!-- Navs -->
