--- a/wordDifference/wordDifference044.html
+++ b/wordDifference/wordDifference044.html
@@ -25,7 +25,7 @@
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference045.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
       <li><a rel="prev" href="./wordDifference043.html">看下一篇</a></li>
     </ul>
