--- a/wordDifference/wordDifference023.html
+++ b/wordDifference/wordDifference023.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>試みる、試す的差異</title>
+    <title>歩む、歩く的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference024.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
       <li><a rel="prev" href="./wordDifference022.html">看下一篇</a></li>
     </ul>
