--- a/wordDifference/wordDifference024.html
+++ b/wordDifference/wordDifference024.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>夢中、熱中的差異</title>
+    <title>試みる、試す的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>夢中（こころみる）& 熱中（ためす）</h2>
-      <p><b>夢中</b>:嘗試。不知道事情結果會如何，總之先嘗試看看的情況。</p><p>例：現状分析を試みます。</p>
-      <p><b>熱中</b>:試驗。著重於為確認對象物的性能效果、實際狀態，而試驗看看的情況。</p><p>例：薬の効果を試します。</p>
+      <h2>試みる（こころみる）& 試す（ためす）</h2>
+      <p><b>試みる</b>:嘗試。不知道事情結果會如何，總之先嘗試看看的情況。</p><p>例：現状分析を試みます。</p>
+      <p><b>試す</b>:試驗。著重於為確認對象物的性能效果、實際狀態，而試驗看看的情況。</p><p>例：薬の効果を試します。</p>
     </div>
  
   <!-- Navs -->
