--- a/wordDifference/wordDifference035.html
+++ b/wordDifference/wordDifference035.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>養う、培う的差異</title>
+    <title>どんどん、だんだん的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,9 +16,9 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>養う（やしなう） & 培う（つちかう）</h2>
-      <p><b>養う</b>:接連不斷地。物事節奏快速、猛烈地一個接一個進行。</p><p>例：遠慮しないで、どんどん食べてくださいね。</p>
-      <p><b>培う</b>:逐漸地。物事節奏緩慢、逐步地一次一點進行。</p><p>例：だんだん春めいて来ました。</p>
+      <h2>どんどん & だんだん</h2>
+      <p><b>どんどん</b>:接連不斷地。物事節奏快速、猛烈地一個接一個進行。</p><p>例：遠慮しないで、どんどん食べてくださいね。</p>
+      <p><b>だんだん</b>:逐漸地。物事節奏緩慢、逐步地一次一點進行。</p><p>例：だんだん春めいて来ました。</p>
     </div>
  
   <!-- Navs -->
