--- a/wordDifference/wordDifference037.html
+++ b/wordDifference/wordDifference037.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>ごとに、おきに的差異</title>
+    <title>お勧め、お薦め的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>ごとに & おきに</h2>
-      <p><b>ごとに</b>:推薦。基於自身經驗上，勸誘對方做出同樣的選擇。</p><p>例：台湾に来たら小籠包を食べなくちゃ。お勧めですよ。</p>
-      <p><b>おきに</b>:推薦。從多樣的事物中挑選，推薦覺得最適合的給對方。</p><p>例：オープン対応の料理用バットをお探しなら、こちらがお薦めします。</p>
+      <h2>お勧め & お薦め</h2>
+      <p><b>お勧め</b>:推薦。基於自身經驗上，勸誘對方做出同樣的選擇。</p><p>例：台湾に来たら小籠包を食べなくちゃ。お勧めですよ。</p>
+      <p><b>お薦め</b>:推薦。從多樣的事物中挑選，推薦覺得最適合的給對方。</p><p>例：オープン対応の料理用バットをお探しなら、こちらがお薦めします。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference039.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference038.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference037.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference036.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
