--- a/wordDifference/wordDifference039.html
+++ b/wordDifference/wordDifference039.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>捲る（めくる）、捲る（まくる）的差異</title>
+    <title>割り当て、手分け的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,7 +16,7 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>捲る（めくる）& 捲る（まくる）</h2>
+      <h2>割り当て（わりあて）& 手分け（てわけ）</h2>
       <p><b>割り当て</b>:分派。將一件事情先分成多個部分，再各自分配下去。</p><p>例：仕事の割り当てを決める。</p>
       <p><b>手分け</b>:分頭進行。將一件事情分給許多人進行。</p><p>例：手分けして迷子を探します。</p>
     </div>
@@ -25,9 +25,9 @@
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference041.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference040.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference039.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference038.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
