--- a/wordDifference/wordDifference034.html
+++ b/wordDifference/wordDifference034.html
@@ -16,7 +16,7 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>下手 & 苦手</h2>
+      <h2>下手(へた) & 苦手（にがて）</h2>
       <p><b>下手</b>:拙劣。客觀對技能的低評價、可以用在他人或自身。*用在自身有種自謙的感覺。</p><p>例：私は絵が下手です。</p>
       <p><b>苦手</b>:不擅長。主觀對技能的感到沒自信、懼怕感，可以用在他人或自身。</p><p>例：彼は人付き合いが苦手です。</p>
     </div>
