--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <body>
   <!-- Nav Section -->
 <div class="navbar">
+
+  <div class="dropdown">
+    <button class="dropbtn">創作室</button>
+    <div class="dropdown-content">
+    <a href="creative/profile.html">關於我</a>
+    </div>
+  </div>
  
   <div class="dropdown">
     <button class="dropbtn">基礎文法</button>
@@ -37,11 +44,6 @@
   <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
   <!-- Info  Section -->
-  <div id="preface">
-    <p><em>About Me</p>
-    <p>在浮沉世間追尋平衡</p>
-    <p>道道生活的兩三事，感受生命的獨一性</p>
-  </div>
 
   <div>
     <img id="pic" src="resources/五十音.PNG" alt="日文五十音表">
