--- a/creative/profile.html
+++ b/creative/profile.html
@@ -14,9 +14,11 @@
 
  <!-- index -->
   <h2>About me</h2>
-  <p>地球意識體，靈魂觀察家，熱愛創作，紀錄浮沉世間中有趣的三三兩兩。</p>
+  <p>地球意識體，靈魂觀察家，熱愛創作，紀錄浮沉世間中有趣的三三兩兩，希望透過語言將人們的情感連結起來。</p>
   <h2>Line 貼圖</h2>
   <a href="https://store.line.me/stickershop/product/17479022">阿朦的日文記事本</a>
+  <h2>聯絡方式</h2>
+  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
   </nav>
   <br>
   <br>
