--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="dropdown">
     <button class="dropbtn">深度學習</button>
     <div class="dropdown-content">
-    <a href="wordOrigin/wordOrigin.html">看語源學日文</a>
+    <a href="wordOrigin/wordOrigin.html">看單字學日文</a>
     <a href="wordDifference/wordDifference.html">看差異學日文</a>
     <a href="wordCompose/wordCompose.html">看複合語學日文</a>
     </div>
@@ -40,8 +40,6 @@
 
 
   <h1>日文小聚落</h1>
-
-  <a href="https://www.instagram.com/japanese_h2o/"><img src="./resources/igIcon.png"></a>
 
   <!-- Info  Section -->
 
