--- a/creative/profile.html
+++ b/creative/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>作者寄語</title>
+  <title>關於我</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="../pageStyle.css" type="text/css" rel="stylesheet">
@@ -9,13 +9,14 @@
 
 <body>
   <a href="../index.html">回首頁</a>
-  <h1>作者寄語</h1>
+  <h1>關於我</h1>
 
  <!-- index -->
-  <h2>About me</h2>
-  <p>地球意識體，靈魂觀察家，熱愛創作，紀錄浮沉世間中有趣的三三兩兩，希望透過語言將人們的情感連結起來。</p>
+  <p>熱愛創作，紀錄浮沉世間中有趣的三三兩兩，渴望透過語言將人們的情感連結起來。</p>
   <h2>Line 貼圖</h2>
-  <a href="https://store.line.me/stickershop/product/17479022">阿朦的日文記事本</a>
+  <img src="../resources/阿朦去背.png"><a href="https://store.line.me/stickershop/product/17479022">點我連結</a>
+  <br>
+  <figcaption>阿朦的日文記事本</figcaption>
   <h2>聯絡方式</h2>
   <a href="https://www.instagram.com/japanese_h2o/"><img src="../resources/igIcon.png"></a>
   </nav>
