--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button class="dropbtn">創作室</button>
     <div class="dropdown-content">
     <a href="creative/profile.html">關於我</a>
+    <a href="creative/diary.html">看故事學日文</a>
     </div>
   </div>
  
@@ -37,9 +38,9 @@
   </div>
   
 </div>
-
-
-  <h1>日文小聚落</h1>
+  <header>
+    <h1>日文小聚落</h1>
+  </header>
 
   <!-- Info  Section -->
 
