--- a/creative/diary.html
+++ b/creative/diary.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <h1>施工中...</h1>
+  <!--
 <head>
   <title>阿朦學日文</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
@@ -11,7 +13,7 @@
   <a href="../index.html">回首頁</a>
   <h1>阿朦學日文</h1>
 
- <!-- index -->
+  index 
   <h2>の</h2>
   <p>阿朦說:美味しいの店。</p>
   <p>這句話哪裡錯了呢?</p>
@@ -24,5 +26,5 @@
 <footer>
   <em>Copyright &copy; 2021 小橘籽. All rights reserved.</em>
 </footer>
-
+-->
 </html>
