--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button class="dropbtn">創作室</button>
     <div class="dropdown-content">
     <a href="creative/profile.html">關於我</a>
-    <a href="creative/diary.html">看故事學日文</a>
+    <a href="creative/photo.html">地球日照</a>
     </div>
   </div>
  
@@ -25,6 +25,7 @@
     <button class="dropbtn">基礎文法</button>
     <div class="dropdown-content">
     <a href="grammar/article001.html">日文敬語</a>
+    <a href="creative/diary.html">看故事學日文</a>
     </div>
   </div>
 
