--- a/creative/photo.html
+++ b/creative/photo.html
@@ -1,24 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <h1>施工中...</h1>
-<!-- 
+
 <head>
-  <title>阿朦學日文</title>
+  <title>地球日照</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="../photoStyle.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>
-  <a href="../index.html">回首頁</a>
-  <h1>座標日本</h1>
+<body> 
+<a href="../index.html">回首頁</a>
+<h1>座標➞日本</h1>
+<div class="journal">
+  <div class="col">
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/IMG_4500.JPG">
+        <span class="caption">雲場池 3.2019</span>
+        <p>池中映天，天空照池。</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/IMG_4402.JPG">
+        <span class="caption">女兒節 3.2019</span>
+        <p>慶祝、喜悅。</p>
+      </div>
+    </div>
+  </div>
 
-  <img src="../resources/DSC_0975.JPG">
-    <figcaption>清水寺</figcaption>
-</body>
+  <div class="col">
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/DSC_0975.JPG">
+        <span class="caption">清水寺 11.2019</span>
+        <p>靜寂的氛圍，一刻恍如永久。</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/IMG_5187.JPG">
+        <span class="caption">海鮮丼 3.2019</span>
+        <p>海底珍饈。</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="col">
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/78312318_971213929919899_6349036676622319616_n.jpg">
+        <span class="caption">平等院 11.2019</span>
+        <p>生氣勃勃的綠色。</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/IMG_4362.JPG">
+        <span class="caption">春櫻 3.2019</span>
+        <p>粉嫩是春天的氣息。</p>
+      </div>
+    </div>
+    <div class="photo">
+      <div class="image-container">
+        <img src="../resources/IMG_7054.JPG">
+        <span class="caption">食堂 9.2019</span>
+        <p>今天午餐吃甚麼?</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-<footer>
-  <em>Copyright &copy; 2021 小橘籽. All rights reserved.</em>
+ <footer>
+  <div class="content">
+    <p>
+      獻給此處此刻的地球，願萬物之靈安坐其中，體認生命課題的本質。<em>---小橘籽</em>
+    </p>
+    <em>Copyright &copy; 2021 小橘籽. All rights reserved.</em>
+    <a href="https://www.instagram.com/japanese_h2o/"><img src="../resources/igIcon.png"></a>
+  </div>
 </footer>
---> 
+
+</body>
 </html>
