--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 <body>
   <!-- Nav Section -->
 <div class="navbar">
-
   <div class="dropdown">
     <button class="dropbtn">創作室</button>
     <div class="dropdown-content">
-    <a href="creative/profile.html">關於我</a>
-    <a href="creative/photo.html">地球日照</a>
+      <a href="creative/profile.html">關於我</a>
+      <a href="creative/photo.html">地球日照</a>
+      <a href="creative/vocabulary.html">單字記憶本</a>
     </div>
   </div>
  
   <div class="dropdown">
     <button class="dropbtn">基礎文法</button>
     <div class="dropdown-content">
-    <a href="grammar/article001.html">日文敬語</a>
-    <a href="creative/diary.html">看故事學日文</a>
+      <a href="grammar/article001.html">日文敬語</a>
+      <a href="creative/diary.html">看故事學日文</a>
     </div>
   </div>
 
   <div class="dropdown">
     <button class="dropbtn">深度學習</button>
     <div class="dropdown-content">
-    <a href="wordOrigin/wordOrigin.html">看單字學日文</a>
-    <a href="wordDifference/wordDifference.html">看差異學日文</a>
-    <a href="wordCompose/wordCompose.html">看複合語學日文</a>
+      <a href="wordOrigin/wordOrigin.html">看單字學日文</a>
+      <a href="wordDifference/wordDifference.html">看差異學日文</a>
+      <a href="wordCompose/wordCompose.html">看複合語學日文</a>
     </div>
   </div>
   
