--- a/creative/vocabulary.html
+++ b/creative/vocabulary.html
@@ -3,7 +3,7 @@
   <h1>施工中...</h1>
 <!--
 <head>
-  <title>阿朦學日文</title>
+  <title>單字記憶本</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link href="../vocabularyStyle.css" type="text/css" rel="stylesheet">
