--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
   </div>
 
   <div class="container">
-    <h3>今週の言葉</h3>
-    <h3>伸び代（のびしろ）：成長空間</h3>
+    <button id='dailybutton'>點這裡看看給你的一句話</button>
   </div>
 
-  <div><script type="text/javascript" src="http://services.webestools.com/cpt_visitors/70619-14-6.js"></script></div>
+ <script src="index.js"></script>
 
 </body>
 
