--- a/creative/vocabulary.html
+++ b/creative/vocabulary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <h1>施工中...</h1>
-<!--
+<!---
 <head>
   <title>單字記憶本</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" >
@@ -11,21 +11,21 @@
 
 <body>
   <a href="../index.html">回首頁</a>
-  <h1>座標日本</h1>
+  <h1>點選可以變</h1>
 
   <div class='container'>
 
     <div class='week'>
         <div class='row secondary-background'>
-          <div class='day square'><h3>パソコン</h3></div>
-          <div class='task square'>
-            <p> パソコン</p>
-          </div>
-          <div class='task square'>グレー</div>
-          <div class='task square'>計算</div>
+          <div class='day square' id='catagory'><h3>食事</h3></div>
+          <div class='task square' id='noun'>米</div>
+          <div class='task square' id='adj'>美味しい</div>
+          <div class='task square' id='verb'>食べる</div>
+          <div class='task square' id='adv'>ゆっくり</div>
         </div>
         <div class='row'>
           <div class='day square'><h3>TUE</h3></div>
+          <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
@@ -35,9 +35,11 @@
           <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
+          <div class='task square'></div>
         </div>
         <div class='row'>
           <div class='day square'><h3>THU</h3></div>
+          <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
@@ -47,13 +49,15 @@
           <div class='task square'></div>
           <div class='task square'></div>
           <div class='task square'></div>
+          <div class='task square'></div>
         </div>
       </div>
-
-  Footer 
-<footer>
-
-</footer>
-
+  </div>
 </body>
+
+<foot>
+  <em>Copyright &copy; 2021 小橘籽. All rights reserved.</em>
+</foot>
+
 </html>
+
