--- a/wordDifference/wordDifference.html
+++ b/wordDifference/wordDifference.html
@@ -18,7 +18,12 @@
   <p>索引</p>
   <nav id="list">
    <ul>
-    
+    <li><a href="wordDifference050.html">スキー & スノーボード</a></li>
+    <li><a href="wordDifference049.html">頼る & 頼む</a></li>
+    <li><a href="wordDifference048.html">浅い & 浅はか</a></li>
+    <li><a href="wordDifference047.html">見かける & 見る</a></li>
+    <li><a href="wordDifference046.html">趣味 & 興味</a></li>
+    <li><a href="wordDifference045.html">探る & 探す</a></li>
     <li><a href="wordDifference044.html">とまる & とどまる</a></li>
     <li><a href="wordDifference043.html">にくい & づらい</a></li>
     <li><a href="wordDifference042.html">内緒 & 秘密</a></li>
