--- a/wordDifference/wordDifference017.html
+++ b/wordDifference/wordDifference017.html
@@ -17,7 +17,7 @@
   <!-- Contents -->
     <div class="main">
         <h2>治す（なおす） & 癒す（いやす）</h2>
-        <p><b>治す</b>:治療。用在身體上。將疾病、傷痛治療恢復。</p><p>例：虫歯を1日でも早く治しない。</p>
+        <p><b>治す</b>:治療。用在身體上。將疾病、傷痛治療恢復。</p><p>例：虫歯を1日でも早く治したい。</p>
         <p><b>癒す</b>:治癒。可用在身體上或心理上。將苦痛治癒或減緩。</p><p>例：傷ついた心を癒す。</p>
     </div>
  
