--- a/wordDifference/wordDifference043.html
+++ b/wordDifference/wordDifference043.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>にくい、づらい的差異</title>
+    <title>とまる、とどまる的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
