--- a/wordDifference/wordDifference046.html
+++ b/wordDifference/wordDifference046.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>とまる、とどまる的差異</title>
+    <title>趣味（しゅみ）、興味（きょうみ）的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>止まる（とまる）& 止まる（とどまる）</h2>
-      <p><b>とまる</b>:停止。從運動的狀態下停止。</p><p>例：走っている車が道に止まる。</p>
-      <p><b>とどまる</b>:靜止。表示靜止、停滯不前的狀態。</p><p>例：走っていた車が道に止まる。</p>
+      <h2>趣味（しゅみ）& 興味（きょうみ）</h2>
+      <p><b>趣味（しゅみ）</b>:興趣。嗜好、喜歡做的事情。</p><p>例：私の趣味は映画鑑賞です。</p>
+      <p><b>興味（きょうみ）</b>:感興趣。對事物覺得有趣而引起的關心感。</p><p>例：私は投資に興味がある。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference045.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference047.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference043.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference045.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
