--- a/wordDifference/wordDifference047.html
+++ b/wordDifference/wordDifference047.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>とまる、とどまる的差異</title>
+    <title>見かける（みかける）、見る（みる）的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>止まる（とまる）& 止まる（とどまる）</h2>
-      <p><b>とまる</b>:停止。從運動的狀態下停止。</p><p>例：走っている車が道に止まる。</p>
-      <p><b>とどまる</b>:靜止。表示靜止、停滯不前的狀態。</p><p>例：走っていた車が道に止まる。</p>
+      <h2>見かける（みかける）& 見る（みる）</h2>
+      <p><b>見かける（みかける）</b>:偶然瞧見。不經意地偶然瞧見。</p><p>例：公園でたまたま学校の先輩を見かけた。</p>
+      <p><b>見る（みる）</b>:看。有意識地去看。</p><p>例：一日中ネットで野球を見る。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference045.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference048.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference043.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference046.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
