--- a/wordDifference/wordDifference048.html
+++ b/wordDifference/wordDifference048.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>とまる、とどまる的差異</title>
+    <title>浅い（あさい）、浅はか（あさはか）的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>止まる（とまる）& 止まる（とどまる）</h2>
-      <p><b>とまる</b>:停止。從運動的狀態下停止。</p><p>例：走っている車が道に止まる。</p>
-      <p><b>とどまる</b>:靜止。表示靜止、停滯不前的狀態。</p><p>例：走っていた車が道に止まる。</p>
+      <h2>浅い（あさい）& 浅はか（あさはか）</h2>
+      <p><b>浅い（あさい）</b>:淺。空間距離上的短、程度上的少。</p><p>例：彼は料理作りの経験が浅い。</p>
+      <p><b>浅はか（あさはか）</b>:膚淺。見識、態度上的輕率膚淺，帶有負面之意。</p><p>例：自分の浅はか行為を今になって後悔した。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference045.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference049.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference043.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference047.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
