--- a/wordDifference/wordDifference050.html
+++ b/wordDifference/wordDifference050.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>とまる、とどまる的差異</title>
+    <title>スキー、スノーボード的差異</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link href="../subPageStyle.css" type="text/css" rel="stylesheet">
@@ -16,18 +16,18 @@
 
   <!-- Contents -->
     <div class="main">
-      <h2>止まる（とまる）& 止まる（とどまる）</h2>
-      <p><b>とまる</b>:停止。從運動的狀態下停止。</p><p>例：走っている車が道に止まる。</p>
-      <p><b>とどまる</b>:靜止。表示靜止、停滯不前的狀態。</p><p>例：走っていた車が道に止まる。</p>
+      <h2>頼る（たよる）& 頼む（たのむ）</h2>
+      <p><b>頼る（たよる）</b>:依靠。從他處得到幫助。</p><p>例：友人を頼って就職口を探す。</p>
+      <p><b>頼む（たのむ）</b>:拜託、請求。向他處請求幫助。</p><p>例：ウーバーイーツ(Uber Eats)で寿司を頼む。</p>
     </div>
  
   <!-- Navs -->
     <div>
     <nav>
     <ul>
-      <li><a rel="prev" href="./wordDifference045.html">看上一篇</a></li>
+      <li><a rel="prev" href="./wordDifference050.html">看上一篇</a></li>
       <li><a rel="prev" href="./wordDifference.html">索引</a></li>
-      <li><a rel="prev" href="./wordDifference043.html">看下一篇</a></li>
+      <li><a rel="prev" href="./wordDifference048.html">看下一篇</a></li>
     </ul>
     </nav>
     </div>
